@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.4 2003-05-17 00:17:30 achu Exp $
+## $Id: Makefile.am,v 1.4.2.1 2004-10-27 02:17:47 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -8,4 +8,5 @@ include config/Make-rpm.mk
 
 SUBDIRS = src man dist compat
 
+EXTRA_DIST = META DISCLAIMER
 
