@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.1 2003-05-14 23:27:53 achu Exp $
+## $Id: Makefile.am,v 1.1.2.1 2004-10-27 02:17:48 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -9,3 +9,5 @@ bin_PROGRAMS = inst
 inst_SOURCES = inst.c
 
 bin_SCRIPTS = dist2 dist_all dist_bootstrap dist_cmp dist_local 
+
+EXTRA_DIST = dist2 dist_all dist_bootstrap dist_cmp dist_local Distfile.sample TUTORIAL
