@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.3 2003-05-19 16:31:25 achu Exp $
+## $Id: Makefile.am,v 1.3.2.1 2004-10-27 02:17:48 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -7,6 +7,29 @@
 SUBDIRS = dist
 
 man3_MANS = \
+        genders_altnodelist.3 \
+        genders_altnodelist_clear.3 \
+        genders_altnodelist_create.3 \
+        genders_altnodelist_destroy.3 \
+        genders_get_cluster.3 \
+        genders_getaltnodes.3 \
+        genders_getaltnodes_preserve.3 \
+        genders_isaltnode.3 \
+        genders_isnode_or_altnode.3 \
+        genders_string.3 \
+        genders_string_to_altnames.3 \
+        genders_string_to_altnames_preserve.3 \
+        genders_string_to_gendnames.3 \
+        genders_string_to_gendnames_preserve.3 \
+        genders_to.3 \
+        genders_to_altname.3 \
+        genders_to_altname_preserve.3 \
+        genders_to_gendname.3 \
+        genders_to_gendname_preserve.3 \
+        gendersllnl.3 \
+        libgendersllnl.3
+
+EXTRA_DIST = \
         genders_altnodelist.3 \
         genders_altnodelist_clear.3 \
         genders_altnodelist_create.3 \
