@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.4 2004-04-27 18:01:14 achu Exp $
+## $Id: Makefile.am,v 1.4.2.1 2004-10-27 02:17:48 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -28,6 +28,7 @@ OTHER_FLAGS = -Wl,--version-script=$(VERSION_SCRIPT)
 endif
 
 include_HEADERS           = gendersllnl.h
+noinst_HEADERS            = hostlist.h
 lib_LTLIBRARIES           = libgendersllnl.la
 libgendersllnl_la_SOURCES = gendersllnl.c hostlist.c
 libgendersllnl_la_LDFLAGS = -version-info $(current):$(rev):$(age) $(OTHER_FLAGS)
